Kubernetes/service/clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
