Kubernetes/service/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-svc
spec:
  selector:
    app: myapp
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
