Kubernetes/service/multiportSVC.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  selector:
    app: hr
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: something
    port: 6001
    targetPort: 6001
