Kubernetes/service/hostBasedIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: example.hr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hrsvc
            port:
              number: 8080
  - host: example.finance.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: financesvc
            port:
              number: 9090
